<resources>
    <string name="app_name">Reservation</string>
    <string name="size_of_the_group">Size of the group</string>
    <string name="size_of_the_gp">Size of the group:</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_number1">Mobile Number:</string>
    <string name="name">Name</string>
    <string name="name1">Name:</string>
    <string name="confirm">CONFIRM</string>
</resources>
